founder section ready

--- a/views/home.html
+++ b/views/home.html
@@ -742,10 +742,11 @@
           </div>
           <div class="col-6 col-md-12">
             <div class="app__main__founder__content">
-              <div class="app__main___founder__content__subtitle">
+              <div class="app__main__founder__content__subtitle">
                 <div class="app__main__founder__content__subtitle__item">
                   Founder Words
                 </div>
+                <img src="../assets/images/Shape.png" alt="">
               </div>
               <div class="app__main__founder__content__title">
                 <h4 class="app__main__founder__content__title__item">
