--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -1590,19 +1590,21 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
   font-family: "Epilogue"; }
   .app__main__founder__image {
     padding-bottom: 50px;
-    margin-right: 40px; }
+    margin-right: 80px; }
     .app__main__founder__image img {
       width: 100%; }
   .app__main__founder__content__subtitle {
-    padding-top: 92px; }
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
     .app__main__founder__content__subtitle__item {
       margin-bottom: 40px;
       color: #ef6d58;
       font-size: 16px; }
   .app__main__founder__content__title__item {
-    font-size: 36px;
+    font-size: 56px;
     color: white;
-    line-height: 50px;
+    line-height: 80px;
     margin-bottom: 20px; }
   .app__main__founder__content__name {
     margin-bottom: 5px; }
@@ -1627,4 +1629,5 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
   .app__main__founder__image {
     margin-right: 0; }
   .app__main__founder__content__title__item {
+    line-height: 50px;
     font-size: 28px; } }
