--- a/assets/style/scss/pages/home/sections/_founder.scss
+++ b/assets/style/scss/pages/home/sections/_founder.scss
@@ -3,14 +3,17 @@
   font-family: "Epilogue";
   &__image {
     padding-bottom: 50px;
-    margin-right: 40px;
+    margin-right: 80px;
     img {
       width: 100%;
     }
   }
   &__content {
+
     &__subtitle {
-      padding-top: 92px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
       &__item {
         margin-bottom: 40px;
         color: #ef6d58;
@@ -19,9 +22,9 @@
     }
     &__title {
       &__item {
-        font-size: 36px;
+        font-size: 56px;
         color: white;
-        line-height: 50px;
+        line-height: 80px;
         margin-bottom: 20px;
       }
     }
@@ -59,6 +62,7 @@
         &__title{
 
             &__item{
+                line-height: 50px;
                 font-size: 28px;
             }
         }
