--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -1631,3 +1631,58 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
   .app__main__founder__content__title__item {
     line-height: 50px;
     font-size: 28px; } }
+
+.app__main__awards {
+  background-color: #fdf0e9;
+  padding-top: 50px; }
+  .app__main__awards__title {
+    padding-bottom: 30px; }
+    .app__main__awards__title__item {
+      font-family: "Epilogue";
+      font-style: normal;
+      font-weight: 800;
+      font-size: 40px;
+      line-height: 48px;
+      text-align: center;
+      color: #391400; }
+  .app__main__awards__content__items {
+    list-style: none; }
+    .app__main__awards__content__items__item {
+      width: 100%;
+      border-top: 1px solid #f3d1bf;
+      border-bottom: 1px solid #f3d1bf;
+      padding: 20px 0; }
+      .app__main__awards__content__items__item .li {
+        align-items: center;
+        justify-content: center; }
+      .app__main__awards__content__items__item__image {
+        display: flex;
+        align-items: center;
+        justify-content: center; }
+        .app__main__awards__content__items__item__image img {
+          width: 120px;
+          margin-right: 20px; }
+      .app__main__awards__content__items__item__award {
+        display: flex;
+        align-items: center;
+        justify-content: center; }
+        .app__main__awards__content__items__item__award p {
+          margin-right: 20px; }
+      .app__main__awards__content__items__item__date {
+        text-align: center; }
+
+@media only screen and (max-width: 992px) {
+  .app__main__awards__content__items__item__image {
+    flex-direction: column; }
+    .app__main__awards__content__items__item__image img {
+      margin-right: 0px;
+      margin-bottom: 30px; }
+    .app__main__awards__content__items__item__image p {
+      margin-bottom: 30px; }
+  .app__main__awards__content__items__item__date {
+    margin-bottom: 30px; }
+  .app__main__awards__content__items__item__award {
+    flex-direction: column; }
+    .app__main__awards__content__items__item__award p {
+      margin-right: 0px;
+      margin-bottom: 10px; } }
