get in touch section done and faqs bug fix

--- a/assets/style/scss/pages/home/_index.scss
+++ b/assets/style/scss/pages/home/_index.scss
@@ -10,3 +10,4 @@
 @import '../home/sections/events';
 @import './sections/services-section';
 @import './sections/faqs';
+@import './sections/getintouch';
