--- a/assets/style/scss/pages/home/sections/_faqs.scss
+++ b/assets/style/scss/pages/home/sections/_faqs.scss
@@ -38,6 +38,7 @@
             }
             .row{
                 width: 100%;
+                flex-wrap: nowrap;
                 justify-content: space-between;
                 align-items: center;
                 margin-bottom: 35px;
