--- a/views/home.html
+++ b/views/home.html
@@ -649,6 +649,26 @@
         </div>
       </div>
     </section>
+    <section id="get-in-touch">
+      <div id="map_wrapper">
+        <div class=" get-in-touch__form">
+          <h4>Get In Touch</h4>
+          <form action="#">
+            <input type="text" placeholder="Your email">
+            <select name="subjects" id="subjects">
+              <option selected disabled value="">Subject</option>
+              <option value="1">Subject 1</option>
+              <option value="2">Subject 2</option>
+              <option value="3">Subject 3</option>
+            </select>
+            <textarea name="" id="" placeholder="Message"></textarea>
+            <button type="submit" class="btn--primary">SUBMIT NOW</button>
+          </form>
+        </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d18260491.238137282!2d-2.7198683559371384!3d45.555738153560796!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1661661441834!5m2!1sen!2s" style="border:0;" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <div class="container">
@@ -692,6 +712,7 @@
       </div>
     </div>
   </footer>
+
 </body>
 
 </html>
