--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -1037,6 +1037,7 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
     border-radius: 0px 0px 6px 6px; }
   #faqs .faqs-accordion__item .row {
     width: 100%;
+    flex-wrap: nowrap;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 35px; }
@@ -1065,3 +1066,64 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
     border: 1px solid #F3D1BF;
     box-shadow: 0px 32px 64px rgba(57, 20, 0, 0.04);
     border-radius: 6px 6px 0px 0px; }
+
+#get-in-touch {
+  background-color: #FDF0E9;
+  position: relative; }
+  #get-in-touch iframe {
+    width: 100%;
+    height: 719px; }
+    @media (max-width: 992px) {
+      #get-in-touch iframe {
+        margin-top: 65px; } }
+  #get-in-touch .get-in-touch__form {
+    box-sizing: border-box;
+    position: absolute;
+    left: 9.375%;
+    top: 50%;
+    width: 470px;
+    transform: translateY(-50%);
+    background-color: white;
+    padding: 57px 48px 48px 48px;
+    border-radius: 6px; }
+    @media (max-width: 576px) {
+      #get-in-touch .get-in-touch__form {
+        position: static;
+        transform: none;
+        width: 81.25%;
+        height: 485px;
+        margin: 0 auto; } }
+    #get-in-touch .get-in-touch__form h4 {
+      font-weight: 700;
+      font-size: 24px;
+      line-height: 32px;
+      color: #391400;
+      margin-bottom: 23px; }
+    #get-in-touch .get-in-touch__form input, #get-in-touch .get-in-touch__form select, #get-in-touch .get-in-touch__form textarea {
+      width: 100%;
+      border: 1px solid #F3D1BF;
+      border-radius: 6px;
+      line-height: 32px;
+      font-size: 16px;
+      font-weight: 400;
+      color: #391400;
+      padding: 9px 0 7px 16px;
+      margin-bottom: 16px;
+      resize: none; }
+    #get-in-touch .get-in-touch__form select {
+      width: 105%;
+      position: relative;
+      padding-right: 50px;
+      background: none;
+      appearance: none;
+      background-image: url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23131313%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E");
+      background-repeat: no-repeat;
+      background-position: right 0.8rem top 50%;
+      background-size: 0.65rem auto; }
+    #get-in-touch .get-in-touch__form textarea {
+      height: 96px; }
+    #get-in-touch .get-in-touch__form button {
+      float: right;
+      margin-top: 16px;
+      display: flex;
+      justify-content: end; }
