--- a/views/home.html
+++ b/views/home.html
@@ -840,6 +840,85 @@
         </div>
       </div>
     </section>
+    <section class="app__main__blogs">
+      <div class="container">
+        <div class="app__main__blogs__header">
+          <div class="app__main__blogs__header__subtitle">
+            <p class="app__main__blogs__header__subtitle__item">
+              Our Team
+            </p>
+          </div>
+          <div class="app__main__blogs__header__title">
+            <div class="app__main__blogs__header__title__item">
+              Latest Blog Articles
+            </div>
+            <div class="app__main__blogs__header__title__buttbn">
+              <button class="app__main__blogs__header__title__button__item">Discover All</button>
+            </div>
+          </div>
+  
+        </div>
+        <div class="app__main__blogs__body">
+    <div class="app__main__blogs__body__items">
+    <div class="row">
+      <div class="col-4 col-md-12">
+        <div class="app__main__blogs__body__items__item">
+          <div class="app__main__blogs__body__items__item__image">
+            <img src="../assets/images/blog1.png" alt="">
+          </div>
+          <div class="app__main__blogs__body__items__item__body">
+            <div class="app__main__blogs__body__items__item__body__category">
+              <p>Stories</p>
+            </div>
+            <div class="app__main__blogs__body__items__item__body__title">
+              <p>Agency is a business you hire to outsource</p>
+            </div>
+            <div class="app__main__blogs__body__items__item__body__date">
+              <p>5 Nov, 2021</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-4 col-md-12">
+        <div class="app__main__blogs__body__items__item">
+          <div class="app__main__blogs__body__items__item__image">
+            <img src="../assets/images/blog2.png" alt="">
+          </div>
+          <div class="app__main__blogs__body__items__item__body">
+            <div class="app__main__blogs__body__items__item__body__category">
+              <p>Design</p>
+            </div>
+            <div class="app__main__blogs__body__items__item__body__title">
+              <p>Outsource your digital marketing efforts</p>
+            </div>
+            <div class="app__main__blogs__body__items__item__body__date">
+              <p>29 Oct, 2021</p>
+            </div>
+          </div>
+        </div>
+      </div><div class="col-4 col-md-12">
+        <div class="app__main__blogs__body__items__item">
+          <div class="app__main__blogs__body__items__item__image">
+            <img src="../assets/images/blog3.png" alt="">
+          </div>
+          <div class="app__main__blogs__body__items__item__body">
+            <div class="app__main__blogs__body__items__item__body__category">
+              <p>Marketing</p>
+            </div>
+            <div class="app__main__blogs__body__items__item__body__title">
+              <p>Your business with a variety of digital</p>
+            </div>
+            <div class="app__main__blogs__body__items__item__body__date">
+              <p>21 Oct, 2021</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+      </div>
+    </section>
     <section id="app__main__testimonials">
       <div class="container">
         <div class="row">
