--- a/views/home.html
+++ b/views/home.html
@@ -22,9 +22,11 @@
     <div class="container">
       <div class="row">
         <div class="col-3">
-          <div class="app__header__logo">
-            <img src="../assets/images/logo.png" alt="" />
-          </div>
+          <a href="home.html">
+            <div class="app__header__logo">
+              <img src="../assets/images/logo.png" alt="" />
+            </div>
+          </a>
         </div>
         <div class="col-6">
           <ul class="app__header__links">
@@ -33,11 +35,11 @@
             </li>
 
             <li class="app__header__links__item">
-              <a href="#">Services</a>
+              <a href="services.html">Services</a>
             </li>
 
             <li class="app__header__links__item">
-              <a href="#">Pricing</a>
+              <a href="contact.html">Contact</a>
             </li>
 
             <li class="app__header__links__item">
