--- a/views/home.html
+++ b/views/home.html
@@ -742,7 +742,7 @@
 
             </div>
           </div>
-          <div class="col-6 col-md-12">
+          <div class="col-6 col-md-12 founder-row">
             <div class="app__main__founder__content">
               <div class="app__main__founder__content__subtitle">
                 <div class="app__main__founder__content__subtitle__item">
