newsletter section done

--- a/views/home.html
+++ b/views/home.html
@@ -1126,6 +1126,22 @@
           </div>
         </div>
       </section>
+      <section id="newsletter">
+        <div class="container">
+        <hr class="hr">
+          <div class="row news-wrapper">
+            <div class="col-6 col-md-12">
+              <h3>Newsletter</h3>
+            </div>
+            <div class="col-6 col-md-12">
+              <form action="#">
+                <input type="email" placeholder="Your email">
+                <button class="btn--secondary" type="submit">Subscribe</button>
+              </form>
+            </div>
+          </div>
+        </div>
+    </section>
       <section id="get-in-touch">
         <div id="map_wrapper">
           <div class=" get-in-touch__form">
@@ -1148,7 +1164,6 @@
             referrerpolicy="no-referrer-when-downgrade"></iframe>
 
         </div>
-      </section>
       </section>
   </main>
   <footer class="footer">
