--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -1807,3 +1807,47 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
       margin-bottom: 20px; }
   .app__main__blogs__header__subtitle__item {
     text-align: center; } }
+
+#newsletter {
+  background-color: #FDF0E9; }
+  #newsletter .news-wrapper {
+    padding-top: 60px;
+    padding-bottom: 116px; }
+    @media (max-width: 992px) {
+      #newsletter .news-wrapper {
+        padding-top: 76px;
+        padding-bottom: 128px; } }
+    #newsletter .news-wrapper h3 {
+      font-weight: 800;
+      font-size: 40px;
+      line-height: 48px;
+      color: #391400; }
+      @media (max-width: 992px) {
+        #newsletter .news-wrapper h3 {
+          margin-bottom: 35px; } }
+    #newsletter .news-wrapper form {
+      height: 100%;
+      display: flex;
+      align-items: center; }
+      @media (max-width: 992px) {
+        #newsletter .news-wrapper form {
+          display: block; } }
+      #newsletter .news-wrapper form input {
+        border: 1px solid #F3D1BF;
+        border-radius: 6px;
+        font-size: 16px;
+        line-height: 32px;
+        color: rgba(57, 20, 0, 0.64);
+        padding: 9px 0 7px 16px;
+        width: 370px;
+        margin-right: 30px; }
+        @media (max-width: 992px) {
+          #newsletter .news-wrapper form input {
+            margin-bottom: 16px;
+            width: 100%; } }
+      @media (max-width: 992px) {
+        #newsletter .news-wrapper form button {
+          width: 104%; } }
+
+.app__main {
+  background-color: #FDF0E9; }
