--- a/assets/style/scss/abstracts/_color.scss
+++ b/assets/style/scss/abstracts/_color.scss
@@ -5,5 +5,5 @@ $text-dark: #391400;
 $text-dark-grey: rgba(57, 20, 0, 0.64);
 $section-bgc: #FDF0E9;
 $hr-bgc: #F3D1BF;
-
+$dark-blue: #32334c;
 $rate-star:#F6D021;
