--- a/views/home.html
+++ b/views/home.html
@@ -70,7 +70,7 @@
   <main class="app__main">
     <section class="app__main__hero">
       <div class="container">
-        <div class="row">
+        <div class="row hero-row">
           <div class="col-6 col-md-12">
             <div class="app__main__hero__content">
               <div class="app__main__hero__content__subtitle">
