--- a/assets/style/scss/pages/home/sections/_hero.scss
+++ b/assets/style/scss/pages/home/sections/_hero.scss
@@ -79,3 +79,11 @@
     }
   }
 }
+@media only screen and (max-width: 992px) {
+ .hero-row{
+  flex-direction: column-reverse;
+ }
+ .app__main__hero{
+  padding-top: 0;
+ }
+}
