--- a/views/home.html
+++ b/views/home.html
@@ -1167,6 +1167,39 @@
 
         </div>
       </section>
+      <section id="contact-us">
+        <div class="container">
+          <div class="row">
+            <div class="col-4 col-md-12">
+                <div class="contact__item">
+                  <div class="icon--title">
+                    <i class="fa-solid fa-phone icon--large"></i>
+                    <h5 class="section--category">Phone</h5>
+                  </div>
+                  <span>+1 (234) 567-89-00</span>
+                </div>
+            </div>
+            <div class="col-4 col-md-12">
+              <div class="contact__item">
+                <div class="icon--title">
+                  <i class="fa-solid fa-envelope icon--large"></i>
+                  <h5 class="section--category">Mail</h5>
+                </div>
+                <span>info@agency.com</span>
+              </div>
+          </div>
+          <div class="col-4 col-md-12">
+            <div class="contact__item">
+              <div class="icon--title">
+                <i class="fa-solid fa-location-arrow icon--large"></i>
+                <h5 class="section--category">Address</h5>
+              </div>
+              <span>2247 Lunetta Street, TX 76301</span>
+            </div>
+        </div>
+          </div>
+        </div>
+      </section>
   </main>
   <footer class="footer">
     <div class="container">
