contact promotion section done and padding big fixes

--- a/assets/style/scss/pages/home/_index.scss
+++ b/assets/style/scss/pages/home/_index.scss
@@ -20,3 +20,4 @@
 @import './sections/blogs';
 @import './sections/newsletter';
 @import './sections/contactus';
+@import './sections/contact-promotion';
