--- a/views/home.html
+++ b/views/home.html
@@ -1045,148 +1045,150 @@
               </div>
             </li>
           </ul>
+          <div class="app__main__awards__content__explore--now">
+              <span>Want more awards? <a href="#">Explore Now</a></span>
+          </div>
         </div>
       </div>
-      </section>
-      <section class="app__main__blogs">
-        <div class="container">
-          <div class="app__main__blogs__header">
-            <div class="app__main__blogs__header__subtitle">
-              <p class="app__main__blogs__header__subtitle__item">
-                Our Team
-              </p>
-            </div>
-            <div class="app__main__blogs__header__title">
-              <div class="app__main__blogs__header__title__item">
-                Latest Blog Articles
-              </div>
-              <div class="app__main__blogs__header__title__buttbn">
-                <button class="app__main__blogs__header__title__button__item">Discover All</button>
-              </div>
-            </div>
-
-          </div>
-          <div class="app__main__blogs__body">
-            <div class="app__main__blogs__body__items">
-              <div class="row">
-                <div class="col-4 col-md-12">
-                  <div class="app__main__blogs__body__items__item">
-                    <div class="app__main__blogs__body__items__item__image">
-                      <img src="../assets/images/blog1.png" alt="">
-                    </div>
-                    <div class="app__main__blogs__body__items__item__body">
-                      <div class="app__main__blogs__body__items__item__body__category">
-                        <p>Stories</p>
-                      </div>
-                      <div class="app__main__blogs__body__items__item__body__title">
-                        <p>Agency is a business you hire to outsource</p>
-                      </div>
-                      <div class="app__main__blogs__body__items__item__body__date">
-                        <p>5 Nov, 2021</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-4 col-md-12">
-                  <div class="app__main__blogs__body__items__item">
-                    <div class="app__main__blogs__body__items__item__image">
-                      <img src="../assets/images/blog2.png" alt="">
-                    </div>
-                    <div class="app__main__blogs__body__items__item__body">
-                      <div class="app__main__blogs__body__items__item__body__category">
-                        <p>Design</p>
-                      </div>
-                      <div class="app__main__blogs__body__items__item__body__title">
-                        <p>Outsource your digital marketing efforts</p>
-                      </div>
-                      <div class="app__main__blogs__body__items__item__body__date">
-                        <p>29 Oct, 2021</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-4 col-md-12">
-                  <div class="app__main__blogs__body__items__item">
-                    <div class="app__main__blogs__body__items__item__image">
-                      <img src="../assets/images/blog3.png" alt="">
-                    </div>
-                    <div class="app__main__blogs__body__items__item__body">
-                      <div class="app__main__blogs__body__items__item__body__category">
-                        <p>Marketing</p>
-                      </div>
-                      <div class="app__main__blogs__body__items__item__body__title">
-                        <p>Your business with a variety of digital</p>
-                      </div>
-                      <div class="app__main__blogs__body__items__item__body__date">
-                        <p>21 Oct, 2021</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section id="newsletter">
-        <div class="container">
-        <hr class="hr">
-          <div class="row news-wrapper">
-            <div class="col-6 col-md-12">
-              <h3>Newsletter</h3>
-            </div>
-            <div class="col-6 col-md-12">
-              <form action="#">
-                <input type="email" placeholder="Your email">
-                <button class="btn--secondary" type="submit">Subscribe</button>
-              </form>
-            </div>
-          </div>
-        </div>
     </section>
-      <section id="get-in-touch">
-        <div id="map_wrapper">
-          <div class=" get-in-touch__form">
-            <h4>Get In Touch</h4>
+    <section class="app__main__blogs">
+      <div class="container">
+        <div class="app__main__blogs__header">
+          <div class="app__main__blogs__header__subtitle">
+            <p class="app__main__blogs__header__subtitle__item section--category">
+              Our Blog
+            </p>
+          </div>
+          <div class="app__main__blogs__header__title">
+            <div class="app__main__blogs__header__title__item">
+              Latest Blog Articles
+            </div>
+            <div class="app__main__blogs__header__title__buttbn">
+              <button class="app__main__blogs__header__title__button__item btn--secondary">Discover All</button>
+            </div>
+          </div>
+
+        </div>
+        <div class="app__main__blogs__body">
+          <div class="app__main__blogs__body__items">
+            <div class="row">
+              <div class="col-4 col-md-12">
+                <div class="app__main__blogs__body__items__item">
+                  <div class="app__main__blogs__body__items__item__image">
+                    <img src="../assets/images/blog1.png" alt="">
+                  </div>
+                  <div class="app__main__blogs__body__items__item__body">
+                    <div class="app__main__blogs__body__items__item__body__category">
+                      <p>Stories</p>
+                    </div>
+                    <div class="app__main__blogs__body__items__item__body__title">
+                      <p>Agency is a business you hire to outsource</p>
+                    </div>
+                    <div class="app__main__blogs__body__items__item__body__date">
+                      <p>5 Nov, 2021</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-4 col-md-12">
+                <div class="app__main__blogs__body__items__item">
+                  <div class="app__main__blogs__body__items__item__image">
+                    <img src="../assets/images/blog2.png" alt="">
+                  </div>
+                  <div class="app__main__blogs__body__items__item__body">
+                    <div class="app__main__blogs__body__items__item__body__category">
+                      <p>Design</p>
+                    </div>
+                    <div class="app__main__blogs__body__items__item__body__title">
+                      <p>Outsource your digital marketing efforts</p>
+                    </div>
+                    <div class="app__main__blogs__body__items__item__body__date">
+                      <p>29 Oct, 2021</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-4 col-md-12">
+                <div class="app__main__blogs__body__items__item">
+                  <div class="app__main__blogs__body__items__item__image">
+                    <img src="../assets/images/blog3.png" alt="">
+                  </div>
+                  <div class="app__main__blogs__body__items__item__body">
+                    <div class="app__main__blogs__body__items__item__body__category">
+                      <p>Marketing</p>
+                    </div>
+                    <div class="app__main__blogs__body__items__item__body__title">
+                      <p>Your business with a variety of digital</p>
+                    </div>
+                    <div class="app__main__blogs__body__items__item__body__date">
+                      <p>21 Oct, 2021</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="newsletter">
+      <div class="container">
+        <hr class="hr">
+        <div class="row news-wrapper">
+          <div class="col-6 col-md-12">
+            <h3>Newsletter</h3>
+          </div>
+          <div class="col-6 col-md-12">
             <form action="#">
-              <input type="text" placeholder="Your email">
-              <select name="subjects" id="subjects">
-                <option selected disabled value="">Subject</option>
-                <option value="1">Subject 1</option>
-                <option value="2">Subject 2</option>
-                <option value="3">Subject 3</option>
-              </select>
-              <textarea name="" id="" placeholder="Message"></textarea>
-              <button type="submit" class="btn--primary">SUBMIT NOW</button>
+              <input type="email" placeholder="Your email">
+              <button class="btn--secondary" type="submit">Subscribe</button>
             </form>
           </div>
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d18260491.238137282!2d-2.7198683559371384!3d45.555738153560796!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1661661441834!5m2!1sen!2s"
-            style="border:0;" allowfullscreen="true" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
-
         </div>
-      </section>
-      <section id="contact-us">
-        <div class="container">
-          <div class="row">
-            <div class="col-4 col-md-12">
-                <div class="contact__item">
-                  <div class="icon--title">
-                    <i class="fa-solid fa-phone icon--large"></i>
-                    <h5 class="section--category">Phone</h5>
-                  </div>
-                  <span>+1 (234) 567-89-00</span>
-                </div>
-            </div>
-            <div class="col-4 col-md-12">
-              <div class="contact__item">
-                <div class="icon--title">
-                  <i class="fa-solid fa-envelope icon--large"></i>
-                  <h5 class="section--category">Mail</h5>
-                </div>
-                <span>info@agency.com</span>
+      </div>
+    </section>
+    <section id="get-in-touch">
+      <div id="map_wrapper">
+        <div class=" get-in-touch__form">
+          <h4>Get In Touch</h4>
+          <form action="#">
+            <input type="text" placeholder="Your email">
+            <select name="subjects" id="subjects">
+              <option selected disabled value="">Subject</option>
+              <option value="1">Subject 1</option>
+              <option value="2">Subject 2</option>
+              <option value="3">Subject 3</option>
+            </select>
+            <textarea name="" id="" placeholder="Message"></textarea>
+            <button type="submit" class="btn--primary">SUBMIT NOW</button>
+          </form>
+        </div>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d18260491.238137282!2d-2.7198683559371384!3d45.555738153560796!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1661661441834!5m2!1sen!2s"
+          style="border:0;" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+      </div>
+    </section>
+    <section id="contact-us">
+      <div class="container">
+        <div class="row">
+          <div class="col-4 col-md-12">
+            <div class="contact__item">
+              <div class="icon--title">
+                <i class="fa-solid fa-phone icon--large"></i>
+                <h5 class="section--category">Phone</h5>
               </div>
+              <span>+1 (234) 567-89-00</span>
+            </div>
+          </div>
+          <div class="col-4 col-md-12">
+            <div class="contact__item">
+              <div class="icon--title">
+                <i class="fa-solid fa-envelope icon--large"></i>
+                <h5 class="section--category">Mail</h5>
+              </div>
+              <span>info@agency.com</span>
+            </div>
           </div>
           <div class="col-4 col-md-12">
             <div class="contact__item">
@@ -1196,10 +1198,38 @@
               </div>
               <span>2247 Lunetta Street, TX 76301</span>
             </div>
-        </div>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
+    <section id="contact-promotion">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="promotion-wrapper">
+              <div class="row contact-row">
+                <div class="col-6 col-md-12 content-wrapper">
+                 <div class="contact-content">
+                  <h2>We’re Help
+                    To Build Your
+                    Dream Project
+                  </h2>
+                  <p>A digital agency is a business you hire to outsource your digital marketing efforts, instead of
+                    handling in-house.</p>
+                    <button type="button" class="btn--secondary">Contact Us</button>
+                 </div>
+                </div>
+                <div class="col-6 col-md-12 contact-image">
+                  <div class="image-wrapper">
+                    <img src="../assets/media/piccontact-promotion.png" alt="promotion">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <div class="container">
