--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -1729,7 +1729,7 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
 
 .app__main__awards {
   background-color: #fdf0e9;
-  padding-top: 50px; }
+  padding-top: 156px; }
   .app__main__awards__title {
     padding-bottom: 30px; }
     .app__main__awards__title__item {
@@ -1765,6 +1765,17 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
           margin-right: 20px; }
       .app__main__awards__content__items__item__date {
         text-align: center; }
+  .app__main__awards__content__explore--now {
+    text-align: center; }
+    .app__main__awards__content__explore--now span {
+      display: block;
+      margin-top: 59px;
+      color: rgba(57, 20, 0, 0.64);
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 32px; }
+      .app__main__awards__content__explore--now span a {
+        color: black; }
 
 @media only screen and (max-width: 992px) {
   .app__main__awards__content__items__item__image {
@@ -1787,15 +1798,14 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
   font-family: "Epilogue";
   width: 100%; }
   .app__main__blogs__header__subtitle {
-    margin-bottom: 20px;
     padding-top: 92px; }
     .app__main__blogs__header__subtitle__item {
       color: #ef6d58;
-      font-size: 16px; }
+      font-size: 16px;
+      letter-spacing: 3px; }
   .app__main__blogs__header__title {
     display: flex;
     justify-content: space-between;
-    align-items: center;
     margin-bottom: 20px; }
     .app__main__blogs__header__title__item {
       font-family: "Epilogue";
@@ -1806,16 +1816,14 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
       letter-spacing: -1px;
       color: #391400; }
     .app__main__blogs__header__title button {
-      background: #ffffff;
-      box-shadow: 0px 3px 9px rgba(57, 20, 0, 0.08);
-      border-radius: 6px;
-      padding: 18px;
-      cursor: pointer;
-      border: none; }
+      margin-bottom: 48px; }
   .app__main__blogs__body__items {
     margin-top: 20px; }
     .app__main__blogs__body__items__item {
       margin-right: 20px; }
+      @media (max-width: 992px) {
+        .app__main__blogs__body__items__item {
+          padding-bottom: 45px; } }
       .app__main__blogs__body__items__item__image {
         width: 100%;
         margin-bottom: 20px;
@@ -1912,6 +1920,9 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
 #contact-us {
   padding-top: 80px;
   padding-bottom: 130px; }
+  @media (max-width: 992px) {
+    #contact-us {
+      padding-top: 32px; } }
   #contact-us .contact__item {
     border: 1px solid #F3D1BF;
     padding: 32px 0 38px 48px; }
@@ -1928,3 +1939,50 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
       line-height: 32px;
       font-weight: 400;
       color: #391400; }
+
+#contact-promotion {
+  background-color: #FDF0E9; }
+  @media (max-width: 992px) {
+    #contact-promotion .contact-row {
+      flex-direction: column-reverse; } }
+  #contact-promotion .promotion-wrapper {
+    padding: 38px 70px 72px 100px;
+    background-color: #EF6D58;
+    border-radius: 6px; }
+    #contact-promotion .promotion-wrapper .row {
+      align-items: center; }
+    @media (max-width: 992px) {
+      #contact-promotion .promotion-wrapper {
+        padding: 32px 27px 48px 28px; } }
+    #contact-promotion .promotion-wrapper h2 {
+      font-weight: 800;
+      color: white;
+      font-size: 56px;
+      letter-spacing: -1px;
+      margin-right: 45.25px;
+      margin-bottom: 28px; }
+      @media (max-width: 992px) {
+        #contact-promotion .promotion-wrapper h2 {
+          font-size: 40px; } }
+    #contact-promotion .promotion-wrapper p {
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 32px;
+      color: #FFFFFF;
+      margin-bottom: 34px; }
+    #contact-promotion .promotion-wrapper .contact-image {
+      display: flex;
+      justify-content: end; }
+      @media (max-width: 992px) {
+        #contact-promotion .promotion-wrapper .contact-image {
+          justify-content: center; } }
+    #contact-promotion .promotion-wrapper .image-wrapper {
+      width: 444px;
+      overflow: hidden;
+      box-sizing: border-box; }
+      @media (max-width: 992px) {
+        #contact-promotion .promotion-wrapper .image-wrapper {
+          margin-bottom: 37px; } }
+      #contact-promotion .promotion-wrapper .image-wrapper img {
+        width: 100%;
+        height: 100%; }
