--- a/assets/style/scss/pages/home/sections/_blogs.scss
+++ b/assets/style/scss/pages/home/sections/_blogs.scss
@@ -5,17 +5,16 @@
   width: 100%;
   &__header {
     &__subtitle {
-      margin-bottom: 20px;
       padding-top: 92px;
       &__item {
         color: #ef6d58;
         font-size: 16px;
+        letter-spacing: 3px;
       }
     }
     &__title {
       display: flex;
       justify-content: space-between;
-      align-items: center;
       margin-bottom: 20px;
       &__item {
         font-family: "Epilogue";
@@ -27,12 +26,7 @@
         color: #391400;
       }
       button {
-        background: #ffffff;
-        box-shadow: 0px 3px 9px rgba(57, 20, 0, 0.08);
-        border-radius: 6px;
-        padding: 18px;
-        cursor: pointer;
-        border: none;
+        margin-bottom: 48px;
       }
     }
   }
@@ -41,6 +35,9 @@
       margin-top: 20px;
       &__item {
         margin-right: 20px;
+        @include for-tablet-landscape-up{
+          padding-bottom: 45px;
+      }
         &__image {
           width: 100%;
           margin-bottom: 20px;
